univention-management-console-frontend (1.0.270-1) unstable; urgency=low  .    * LoginDialog: use dijit._DialogLevelManager to handle visibility of dialogs      correctly; Bug #25249
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@30980 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/dijit/themes/umc/umc.css
+++ b/management/univention-management-console-frontend/css/dijit/themes/umc/umc.css
@@ -4578,15 +4578,6 @@ DIV.dijitTabDisabled, .dj_ie DIV.dijitTabDisabled {
 
 /* @group Login */
 
-.umcLoginDialog_underlay {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	height: 100%;
-	width: 100%;
-	z-index: 990;
-}
-
 .umcLoginDialog {
 	width: 300px;
 	padding: 25px;
